# tango

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yaml  styles.yml
tango/home/templates/home/: home_page.html
tango/main/: wsgi.py
tango/main/settings/: base.py  dev.py  production.py
tango/main/templates/: base.html
tango/search/templates/search/: search.html
